@@ -46,5 +46,7 @@ CHANGES SINCE 2.3
 
 17. New: variable declaration names are checked for common mispellings (e.g. "hi" vs. "high") should the similar variable exist and be visible. [types, etc. too]
 
-18. New: long variable names ought to have underscores. [functions and procedures, too]
+18. New: long names ought to have underscores. [type tests needed]
+
+19. Fix: trailing underscores not allowed in variable names. [test needed]
 
